--- a/index.css
+++ b/index.css
@@ -1,1 +1,4 @@
 @import url("./css/reset.css");
+/* Font Awesome Icons*/
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css");
+/*--------------*/
