--- a/index.css
+++ b/index.css
@@ -2,3 +2,4 @@
 /* Font Awesome Icons*/
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css");
 /*--------------*/
+@import url("./css/header.css");
