--- a/css/header.css
+++ b/css/header.css
@@ -5,7 +5,7 @@ header {
 }
 
 .header-wrapper {
-    max-width: 1024px;
+    max-width: 64rem;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
@@ -62,7 +62,7 @@ header {
     }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 48rem) {
     .header-wrapper {
         nav ul {
             display: flex;
