--- a/index.css
+++ b/index.css
@@ -3,3 +3,4 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css");
 /*--------------*/
 @import url("./css/header.css");
+@import url("./css/main.css");
