--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,16 @@ main {
                 color: #fff;
                 cursor: pointer;
                 transition: transform 0.3s ease-in-out;
+
+                &:hover {
+                    background-color: rgb(31, 194, 31);
+                }
+
+                span {
+                    font-weight: 600;
+                    font-size: 0.9rem;
+                    pointer-events: none;
+                }
             }
         }
     }
