--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,6 @@ main {
                 justify-content: center;
                 align-items: center;
                 gap: 1rem;
-
                 width: 100%;
 
                 img {
@@ -45,6 +44,7 @@ main {
             div {
                 p {
                     text-align: center;
+                    font-weight: 400;
                 }
             }
 
@@ -63,12 +63,13 @@ main {
 
                 span {
                     font-weight: 600;
-                    font-size: 0.9rem;
+                    font-size: 1rem;
                 }
             }
 
             &:hover {
                 transform: scale(1.02);
+                box-shadow: 0 0 1rem rgba(0, 0, 0, 0.4);
             }
         }
     }
