--- a/css/main.css
+++ b/css/main.css
@@ -17,22 +17,28 @@ main {
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            gap: 0.75rem;
-            padding: 0.5rem;
+            gap: 1rem;
+            padding: 1rem;
             transition: transform 0.3s ease-in-out;
 
             figure {
                 display: flex;
                 flex-direction: column;
-                justify-content: center;
+                justify-content: space-between;
                 align-items: center;
                 gap: 1rem;
                 width: 100%;
+                height: 100%;
+                flex: 1;
 
                 img {
                     width: 100%;
-                    height: auto;
+                    height: 100%;
+                    max-height: 20rem;
                     border-radius: 0.25rem;
+                    object-fit: cover;
+                    border: 1px solid rgba(0, 0, 0, 0.2);
+                    flex: 1;
                 }
 
                 figurecaption {
@@ -42,6 +48,12 @@ main {
             }
 
             div {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                gap: 1rem;
+
                 p {
                     text-align: center;
                     font-weight: 400;
@@ -68,7 +80,7 @@ main {
             }
 
             &:hover {
-                transform: scale(1.02);
+                transform: scale(1.01);
                 box-shadow: 0 0 1rem rgba(0, 0, 0, 0.4);
             }
         }
@@ -76,6 +88,12 @@ main {
 }
 
 @media screen and (min-width: 768px) {
+    main section {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (min-width: 1024px) {
     main section {
         grid-template-columns: repeat(3, 1fr);
     }
