--- a/css/shoppingCart.css
+++ b/css/shoppingCart.css
@@ -1,1 +1,69 @@
+.shopping-cart {
+    position: fixed;
+    z-index: 1;
+    top: -0.5rem;
+    left: -0.5rem; /*-20rem to hide*/
+    background-color: #fff;
+    padding: 1rem;
+    margin: 1rem;
+    box-shadow: 1px 1px 1rem rgba(0, 0, 0, 0.2);
 
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+    h1 {
+        font-size: 1.25rem;
+        font-weight: bold;
+    }
+
+    ul {
+        display: flex;
+        flex-direction: column;
+        gap: 0.25rem;
+
+        li {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            gap: 0.25rem;
+            box-shadow: 1px 1px 1rem rgba(0, 0, 0, 0.2);
+            padding: 0.25rem;
+        }
+    }
+
+    button {
+        padding: 0.25rem 0.5rem;
+        border: none;
+        border-radius: 0.25rem;
+        background-color: red;
+        color: #fff;
+        cursor: pointer;
+
+        &:hover {
+            background-color: darkred;
+        }
+    }
+
+    p {
+        font-weight: bold;
+        font-size: 1.25rem;
+    }
+
+    > div {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 1rem;
+
+        > button {
+            padding: 0.5rem 1rem;
+            font-weight: 500;
+            background-color: rgb(28, 150, 28);
+
+            &:hover {
+                background-color: rgb(31, 194, 31);
+            }
+        }
+    }
+}
