--- a/css/shoppingCart.css
+++ b/css/shoppingCart.css
@@ -1,8 +1,8 @@
 .shopping-cart {
     position: fixed;
     z-index: 1;
-    top: -0.5rem;
-    left: -0.5rem; /*-20rem to hide*/
+    bottom: 0;
+    left: translateX(50%); /*-20rem to hide*/
     background-color: #fff;
     padding: 1rem;
     margin: 1rem;
@@ -13,6 +13,7 @@
     gap: 1rem;
 
     h1 {
+        text-align: center;
         font-size: 1.25rem;
         font-weight: bold;
     }
@@ -20,7 +21,9 @@
     ul {
         display: flex;
         flex-direction: column;
+        justify-content: center;
         gap: 0.25rem;
+        font-size: 0.8rem;
 
         li {
             display: flex;
@@ -46,6 +49,7 @@
     }
 
     p {
+        text-align: center;
         font-weight: bold;
         font-size: 1.25rem;
     }
@@ -64,6 +68,19 @@
             &:hover {
                 background-color: rgb(31, 194, 31);
             }
+        }
+    }
+}
+
+@media (min-width: 768px) {
+    .shopping-cart {
+        top: -0.5rem;
+        left: -0.5rem;
+        bottom: auto;
+
+        h1,
+        p {
+            text-align: start;
         }
     }
 }
