--- a/css/shoppingCart.css
+++ b/css/shoppingCart.css
@@ -7,6 +7,7 @@
     padding: 1rem;
     margin: 1rem;
     box-shadow: 1px 1px 1rem rgba(0, 0, 0, 0.2);
+    transition: left 0.5s ease-in-out;
 
     display: flex;
     flex-direction: column;
@@ -75,7 +76,7 @@
 @media (min-width: 768px) {
     .shopping-cart {
         top: -0.5rem;
-        left: -0.5rem;
+        left: -25rem;
         bottom: auto;
 
         h1,
