--- a/css/shoppingCart.css
+++ b/css/shoppingCart.css
@@ -36,16 +36,21 @@
         }
     }
 
-    button {
-        padding: 0.25rem 0.5rem;
-        border: none;
-        border-radius: 0.25rem;
-        background-color: red;
-        color: #fff;
-        cursor: pointer;
+    div {
+        display: flex;
+        gap: 0.25rem;
 
-        &:hover {
-            background-color: darkred;
+        button {
+            padding: 0.25rem 0.5rem;
+            border: none;
+            border-radius: 0.25rem;
+            background-color: red;
+            color: #fff;
+            cursor: pointer;
+
+            &:hover {
+                background-color: darkred;
+            }
         }
     }
 
