--- a/index.css
+++ b/index.css
@@ -5,3 +5,4 @@
 @import url("./css/header.css");
 @import url("./css/main.css");
 @import url("./css/shoppingCart.css");
+@import url("./css/footer.css");
