--- a/index.css
+++ b/index.css
@@ -5,4 +5,5 @@
 @import url("./css/header.css");
 @import url("./css/main.css");
 @import url("./css/shoppingCart.css");
+@import url("./css/pagination.css");
 @import url("./css/footer.css");
